@@ -82,7 +82,7 @@
       <%= render 'boards/modals/new_board_form' unless request.xhr? %>
     <% end %>
 
-    <% if controller_name == 'evidence'%>
+    <% if controller_path == 'evidence' %>
       <%= render partial: 'evidence/modals/move' %>
     <% end %>
 
